--- a/Test.ipynb
+++ b/Test.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import division, print_function, absolute_import\n",
     "import tflearn\n",
     "from tflearn.layers.core import input_data, dropout, fully_connected\n",
     "from tflearn.layers.conv import conv_2d, max_pool_2d\n",
@@ -111,6 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "target_path= '/home/zt/Documents/TensorF/TensorFlow/2_Image_classifier/Image_classifier_CNN-master/Image Classification Data'\n",
     "img_dir= sorted(os.listdir(target_path))\n",
     "\n",
     "for i in range(len(img_dir)):\n",
